# python-primer-for-data-science-and-machine-learning

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01_Introduction.ipynb  02_Python_Environment.ipynb  03_Data_Types_and_Structures.ipynb  03_Data_Types_and_Structures_Sandbox.ipynb  04_Control_Flow.ipynb  04_Control_Flow_Sandbox.ipynb  05_Functions_and_Modules.ipynb  05_Functions_and_Modules_Sandbox.ipynb  06_Object_Oriented_Basics.ipynb  06_Object_Oriented_Basics_Sandbox.ipynb  07_Idiomatic_Python.ipynb  07_Idiomatic_Python_Sandbox.ipynb  08_NumPy_Essentials.ipynb  08_NumPy_Essentials_Sandbox.ipynb  09_Matplotlib_and_Visualization_Sandbox.ipynb  11_Scikit_Learn_Mini_Primer_Sandbox.ipynb  13_Software_Craftsmanship.ipynb
