[project]
name = "pycode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
